--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run clean:dist && npm run build-server",
-    "start": "node ./dist/index.js",
-    "dev": "NODE_ENV=development nodemon --exec babel-node ./src/index.js",
+    "start": "node ./dist",
+    "dev": "NODE_ENV=development nodemon --exec babel-node ./src",
     "test": "NODE_ENV=test jest --collect-coverage --detectOpenHandles",
     "coveralls": "NODE_ENV=test jest --coverage && cat ./coverage/lcov.info | coveralls",
     "clean:dist": "rm -rf dist && mkdir dist",
@@ -29,7 +29,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "lodash": "^4.17.15"
+    "mongodb": "^3.5.7",
+    "mongoose": "^5.9.13",
+    "mongoose-paginate": "^5.0.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.0",
